--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GT
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = wofi --show drun --width=400 --prompt ""
 
 bind = WIN, F, fullscreen, 0 #fulscreen to entire screen
 bind = WIN SHIFT, F, fullscreenstate, 0 2 
